# EmbroForm

./: README.md  pyproject.toml
backup/: EmbroForm.ipynb  MeshProcessing.ipynb
design_tool/: design_tool.py  research_design_tool_signal.py  signal_generator.py
embroform/: __init__.py
embroform.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
embroform/src/: layout.py  path.py  pointset.py  preprocess.py  splice.py
scripts/: run_pipeline.py
